--- a/theme/modules/footer-static.html
+++ b/theme/modules/footer-static.html
@@ -146,7 +146,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
   }
 </style>
   </div>
-  <div class="section footer wf-section">
+  <div id="footer" class="section footer wf-section">
     <div class="container direction-vertical-align-center">
       <div class="div-block">
         <p class="subline footer">{{ texts.2f481b2a }}</p>
