--- a/theme/projets.html
+++ b/theme/projets.html
@@ -153,8 +153,8 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
         <div class="nav-wrap-desktop">
           <a href="{{ links.2f }}" class="wrap-block-logo w-inline-block"><img src="{{ images.-7a88968b.url }}" loading="lazy" alt="{{ images.-7a88968b.alt | trim | escape }}" class="image"></a>
           <div class="wrap-nav-links">
-            <a href="{{ links.23 }}" class="nav-link dark">{{ texts.50c8e507 }}</a>
-            <a href="{{ links.23 }}" class="nav-link last dark">{{ texts.-64104400 }}</a>
+            <a href="{{ links.-1875e8 }}" aria-current="page" class="nav-link dark w--current">{{ texts.50c8e507 }}</a>
+            <a href="{{ links.-10273082 }}" class="nav-link last dark">{{ texts.-64104400 }}</a>
           </div>
         </div>
         <div class="nav-wrap-mobile">
@@ -255,7 +255,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       </div>
     </div>
   </div>
-  <div class="section footer wf-section">
+  <div id="footer" class="section footer wf-section">
     <div class="container direction-vertical-align-center">
       <div class="div-block">
         <p class="subline footer">{{ texts.2f481b2a }}</p>
