--- a/theme/index.html
+++ b/theme/index.html
@@ -118,7 +118,6 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
             aspect-ratio: 16 / 9;
         }</style></head>
 <body class="body">
-  <div class="transition"></div>
   <div class="embed-css w-embed">
     <style>
   /* typography */
@@ -163,7 +162,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
     <div class="container">
       <nav class="navigation">
         <div class="nav-wrap-desktop">
-          <a href="{{ links.2f }}" aria-current="page" class="wrap-block-logo w-inline-block w--current"><img src="{{ images.-7a88968b.url }}" loading="lazy" alt="{{ images.-7a88968b.alt | trim | escape }}" class="image"></a>
+          <a href="{{ links.2f }}" aria-current="page" class="wrap-block-logo w-inline-block w--current"><img src="{{ images.-7a88968b.url }}" loading="lazy" style="-webkit-transform:translate3d(null, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="1b517502-e2cf-aae9-d407-16aa5945710c" alt="{{ images.-7a88968b.alt | trim | escape }}" class="image"></a>
           <div class="wrap-nav-links">
             <a href="{{ links.-1875e8 }}" class="nav-link">{{ texts.50c8e507 }}</a>
             <a href="{{ links.-10273082 }}" class="nav-link last">{{ texts.-64104400 }}</a>
@@ -247,19 +246,19 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
   </div>
   <div class="section header wf-section">
     <div class="container header">
-      <p class="title header">{{ texts.6515d33d }}</p>
-    </div><img class="img header" src="{{ images.54ee7ec.url }}" alt="{{ images.54ee7ec.alt | trim | escape }}" data-sizes="[{&quot;max&quot;:767,&quot;size&quot;:&quot;100vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;67vw&quot;}]" sizes="(max-width: 767px) 100vw, 67vw" loading="eager">
+      <p data-w-id="4362f71c-6cdc-de4c-ebf2-464cc9f7d327" style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="title header">{{ texts.6515d33d }}</p>
+    </div><img class="img header" src="{{ images.54ee7ec.url }}" alt="{{ images.54ee7ec.alt | trim | escape }}" data-sizes="[{&quot;max&quot;:767,&quot;size&quot;:&quot;100vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;67vw&quot;}]" style="opacity:0" sizes="(max-width: 767px) 100vw, 67vw" data-w-id="78d37f07-d4ba-7611-0d3d-f9d54629509f" loading="eager">
   </div>
-  <div class="section wf-section">
+  <div data-w-id="35279f3c-0f51-d62d-3daf-818b0a502dd3" class="section wf-section">
     <div class="container align-botom">
       {%- assign collection = collections.highlight | filter: "f_number,eq,1", "ALL", page.inputPath | sort: "-created-on" -%}<div class="collection-list-wrapper-highlights vertical w-dyn-list">
         {%- unless collection.length == 0 -%}<div role="list" class="collection-list-highlights w-dyn-items">
           {%- for item in collection -%}<div role="listitem" class="collection-item-highlights w-dyn-item">
             <div class="envelope-vertical">
-              <div class="wrap-img-vertical"><img loading="lazy" width="800" height="1205" alt="{{ item.data.title }}" src="{{ item.data.f_main-image.url }}" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;87vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;75vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;400px&quot;}]" class="img-vertical">
-                <p class="title displace-left">{{ item.data.title }}</p>
+              <div class="wrap-img-vertical"><img class="img-vertical" src="{{ item.data.f_main-image.url }}" width="800" height="1205" alt="{{ item.data.title }}" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;87vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;75vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;400px&quot;}]" style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" loading="lazy">
+                <p style="-webkit-transform:translate3d(-20px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-20px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-20px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-20px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="title displace-left">{{ item.data.title }}</p>
               </div>
-              <p class="paragraph margin-top">{{ item.data.f_description }}</p>
+              <p data-w-id="8f6ca3e1-a67b-e131-e70f-a0d9d1a3955a" style="opacity:0" class="paragraph margin-top">{{ item.data.f_description }}</p>
             </div>
           </div>{%- endfor -%}
         </div>{%- endunless -%}
@@ -269,14 +268,14 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       </div>
     </div>
   </div>
-  <div class="section grey wf-section">
+  <div data-w-id="0b79a3fd-6b9f-878a-96e5-6ea1a2288ba7" class="section grey wf-section">
     <div class="container justify-end">
       {%- assign collection = collections.highlight | filter: "f_number,eq,2", "ALL", page.inputPath | sort: "-created-on" -%}<div class="collection-list-wrapper-highlights w-dyn-list">
         {%- unless collection.length == 0 -%}<div role="list" class="collection-list-highlights justify-right w-dyn-items">
           {%- for item in collection -%}<div role="listitem" class="collection-item-highlights justify-right w-dyn-item">
-            <div class="wrapper-highlights"><img loading="lazy" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;87vw&quot;},{&quot;max&quot;:1439,&quot;size&quot;:&quot;65vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;800px&quot;}]" alt="{{ item.data.title }}" src="{{ item.data.f_main-image.url }}" class="img-horizontal">
-              <p class="title displace-right">{{ item.data.title }}</p>
-              <p class="paragraph margin-top">{{ item.data.f_description }}</p>
+            <div class="wrapper-highlights"><img loading="lazy" style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;87vw&quot;},{&quot;max&quot;:1439,&quot;size&quot;:&quot;65vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;800px&quot;}]" alt="{{ item.data.title }}" src="{{ item.data.f_main-image.url }}" class="img-horizontal">
+              <p style="-webkit-transform:translate3d(20px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(20px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(20px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(20px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="title displace-right">{{ item.data.title }}</p>
+              <p data-w-id="0b79a3fd-6b9f-878a-96e5-6ea1a2288bae" style="opacity:0" class="paragraph margin-top">{{ item.data.f_description }}</p>
             </div>
           </div>{%- endfor -%}
         </div>{%- endunless -%}
@@ -308,14 +307,14 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       </div>
     </div>
   </div>
-  <div class="section wf-section">
+  <div data-w-id="b7f8d7ba-3998-b981-8c1b-39154ed954fe" class="section wf-section">
     <div class="container align-botom">
       {%- assign collection = collections.highlight | filter: "f_number,eq,3", "ALL", page.inputPath | sort: "-created-on" -%}<div class="collection-list-wrapper-highlights vertical w-dyn-list">
         {%- unless collection.length == 0 -%}<div role="list" class="collection-list-highlights w-dyn-items">
           {%- for item in collection -%}<div role="listitem" class="collection-item-highlights w-dyn-item">
             <div class="envelope-vertical">
-              <div class="wrap-img-vertical"><img loading="lazy" width="800" height="1205" alt="{{ item.data.title }}" src="{{ item.data.f_main-image.url }}" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;87vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;75vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;400px&quot;}]" class="img-vertical">
-                <p class="title displace-left">{{ item.data.title }}</p>
+              <div class="wrap-img-vertical"><img class="img-vertical" src="{{ item.data.f_main-image.url }}" width="800" height="1205" alt="{{ item.data.title }}" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;87vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;75vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;400px&quot;}]" style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" loading="lazy">
+                <p style="-webkit-transform:translate3d(-20px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-20px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-20px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-20px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="title displace-left">{{ item.data.title }}</p>
               </div>
               <p class="paragraph margin-top">{{ item.data.f_description }}</p>
             </div>
@@ -327,13 +326,13 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       </div>
     </div>
   </div>
-  <div class="section grey wf-section">
+  <div data-w-id="58bfb0f2-8b1b-8e5c-23a2-a1c00f1ca2fa" class="section grey wf-section">
     <div class="container justify-end">
       {%- assign collection = collections.highlight | filter: "f_number,eq,4", "ALL", page.inputPath | sort: "-created-on" -%}<div class="collection-list-wrapper-highlights w-dyn-list">
         {%- unless collection.length == 0 -%}<div role="list" class="collection-list-highlights justify-right w-dyn-items">
           {%- for item in collection -%}<div role="listitem" class="collection-item-highlights justify-right w-dyn-item">
-            <div class="wrapper-highlights"><img loading="lazy" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;87vw&quot;},{&quot;max&quot;:1439,&quot;size&quot;:&quot;65vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;800px&quot;}]" alt="{{ item.data.title }}" src="{{ item.data.f_main-image.url }}" class="img-horizontal">
-              <p class="title displace-right">{{ item.data.title }}</p>
+            <div class="wrapper-highlights"><img loading="lazy" style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;87vw&quot;},{&quot;max&quot;:1439,&quot;size&quot;:&quot;65vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;800px&quot;}]" alt="{{ item.data.title }}" src="{{ item.data.f_main-image.url }}" class="img-horizontal">
+              <p style="-webkit-transform:translate3d(20px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(20px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(20px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(20px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="title displace-right">{{ item.data.title }}</p>
               <p class="paragraph margin-top">{{ item.data.f_description }}</p>
             </div>
           </div>{%- endfor -%}
