--- a/theme/politique-de-confidentialite.html
+++ b/theme/politique-de-confidentialite.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
-<html data-wf-page="644130593fdd7e45f3fde91d" data-wf-site="6411ac7715f8d413325735be" lang="fr"><head><link rel="preconnect" crossorigin="true" href="https://assets.website-files.com">
+<html data-wf-page="64b90ac68b27fa1b12f3be32" data-wf-site="6411ac7715f8d413325735be" lang="fr"><head><link rel="preconnect" crossorigin="true" href="https://assets.website-files.com">
   <meta charset="utf-8">
-  <title>Espasyo - Architecture, Construction en paille, Rénovation | Projets</title>
-  <meta content="Une approche plus intuitive et logique de la construction. Espasyo mise sur des stratégies low-tech et peu énergivores pour allier sobriété et simplicité. Pas de ventilation mécanique ni de climatisation, mais des constructions très bien isolées, avec de grands puits de lumière pour maintenir les températures idéales sans consommation superflue. En bref, une architecture qui se suffit à elle-même et un renoncement généralisé aux technologies surabondantes. Combinés à l’utilisation dénergie solaire pour la production d’eau chaude sanitaire et de chauffage, ces choix révèlent leur plein potentiel." name="description">
-  <meta content="Espasyo - Architecture, Construction en paille, Rénovation | Projets" property="og:title">
-  <meta content="Une approche plus intuitive et logique de la construction. Espasyo mise sur des stratégies low-tech et peu énergivores pour allier sobriété et simplicité. Pas de ventilation mécanique ni de climatisation, mais des constructions très bien isolées, avec de grands puits de lumière pour maintenir les températures idéales sans consommation superflue. En bref, une architecture qui se suffit à elle-même et un renoncement généralisé aux technologies surabondantes. Combinés à l’utilisation dénergie solaire pour la production d’eau chaude sanitaire et de chauffage, ces choix révèlent leur plein potentiel." property="og:description">
-  <meta content="https://uploads-ssl.webflow.com/6411ac7715f8d413325735be/644ba0d0cbe59b84cb347b1e_espasyo-opengraph.jpg" property="og:image">
-  <meta content="Espasyo - Architecture, Construction en paille, Rénovation | Projets" property="twitter:title">
-  <meta content="Une approche plus intuitive et logique de la construction. Espasyo mise sur des stratégies low-tech et peu énergivores pour allier sobriété et simplicité. Pas de ventilation mécanique ni de climatisation, mais des constructions très bien isolées, avec de grands puits de lumière pour maintenir les températures idéales sans consommation superflue. En bref, une architecture qui se suffit à elle-même et un renoncement généralisé aux technologies surabondantes. Combinés à l’utilisation dénergie solaire pour la production d’eau chaude sanitaire et de chauffage, ces choix révèlent leur plein potentiel." property="twitter:description">
-  <meta content="https://uploads-ssl.webflow.com/6411ac7715f8d413325735be/644ba0d0cbe59b84cb347b1e_espasyo-opengraph.jpg" property="twitter:image">
-  <meta property="og:type" content="website">
-  <meta content="summary_large_image" name="twitter:card">
+  <title>Politique de Confidentialité</title>
+  <meta content="Politique de Confidentialité" property="og:title">
+  <meta content="Politique de Confidentialité" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="/assets/css/normalize.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/components.css" rel="stylesheet" type="text/css">
@@ -154,7 +147,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
   <div class="fs-cc-components">
     <div fs-cc="banner" class="fs-cc-banner_component">
       <div class="fs-cc-banner_container">
-        <div class="fs-cc-banner_text">{{ texts.-5767796a }}<strong>{{ texts.6af87d0b }}</strong>{{ texts.3276fd0 }}<a href="{{ links.-14519503 }}" class="link-2">{{ texts.6ad7d527 }}</a>{{ texts.1442d302 }}</div>
+        <div class="fs-cc-banner_text">{{ texts.-5767796a }}<strong>{{ texts.6af87d0b }}</strong>{{ texts.3276fd0 }}<a href="{{ links.-14519503 }}" aria-current="page" class="link-2 w--current">{{ texts.6ad7d527 }}</a>{{ texts.1442d302 }}</div>
         <div class="fs-cc-banner_buttons-wrapper">
           <a fs-cc="open-preferences" href="{{ links.23 }}" class="fs-cc-banner_text-link">{{ texts.-6bfbaf20 }}</a>
           <a fs-cc="deny" href="{{ links.23 }}" class="fs-cc-banner_button fs-cc-button-alt w-button">{{ texts.-5c134542 }}</a>
@@ -172,7 +165,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       <div fs-cc="interaction" class="fs-cc-manager_trigger"></div>
     </div>
     <div fs-cc="preferences" fs-cc-scroll="disable" class="fs-cc-prefs_component w-form">
-      <form id="cookie-preferences" name="wf-form-Cookie-Preferences" data-name="cookie_preferences" method="get" class="fs-cc-prefs_form" data-wf-page-id="644130593fdd7e45f3fde91d" data-wf-element-id="24cf7492-c994-5433-4ac3-8c7dd3f7e584" data-netlify="true" data-ajax="true" data-content-type="application/x-www-form-urlencoded">
+      <form id="cookie-preferences" name="wf-form-Cookie-Preferences" data-name="cookie_preferences" method="get" class="fs-cc-prefs_form" data-wf-page-id="64b90ac68b27fa1b12f3be32" data-wf-element-id="24cf7492-c994-5433-4ac3-8c7dd3f7e584" data-netlify="true" data-ajax="true" data-content-type="application/x-www-form-urlencoded">
         <div fs-cc="close" class="fs-cc-prefs_close">
           <div class="fs-cc-prefs_close-icon w-embed"><svg fill="currentColor" aria-hidden="true" focusable="false" viewBox="0 0 16 24">
               <path d="M9.414 8l4.293-4.293-1.414-1.414L8 6.586 3.707 2.293 2.293 3.707 6.586 8l-4.293 4.293 1.414 1.414L8 9.414l4.293 4.293 1.414-1.414L9.414 8z"></path>
@@ -240,18 +233,18 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       <div fs-cc="interaction" class="fs-cc-prefs_trigger"></div>
     </div>
   </div>
-  <div class="section nav wf-section">
+  <nav class="section nav wf-section">
     <div class="container">
       <nav class="navigation">
         <div class="nav-wrap-desktop">
           <a href="{{ links.2f }}" class="wrap-block-logo w-inline-block"><img src="{{ images.-7a88968b.url }}" loading="lazy" alt="{{ images.-7a88968b.alt | trim | escape }}" class="image"></a>
           <div class="wrap-nav-links">
-            <a href="{{ links.-2f646e9 }}" aria-current="page" class="nav-link dark w--current">{{ texts.50c8e507 }}</a>
+            <a href="{{ links.-2f646e9 }}" class="nav-link dark">{{ texts.50c8e507 }}</a>
             <a href="{{ links.-10273082 }}" class="nav-link last dark">{{ texts.-64104400 }}</a>
           </div>
         </div>
         <div class="nav-wrap-mobile">
-          <div class="wrapper-hamburger w-embed">
+          <div data-w-id="c023be1f-7927-022c-1747-f09449d2e0d6" class="wrapper-hamburger w-embed">
             <style>
     :root {
       --stroke-width: 40px;
@@ -312,42 +305,36 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
               <path id="bottom" class="path-menu" d="M300,210 C300,210 520,210 540,210 C740,210 640,530 520,410 C440,330 300,190 300,190" transform="translate(480, 320) scale(1, -1) translate(-480, -318) "></path>
             </svg>
           </div>
-          <div class="wrapper-menu-mobile">
+          <div style="-webkit-transform:translate3d(-100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="wrapper-menu-mobile">
             <div class="nav__mobile-wrap-links">
               <a href="{{ links.2f }}" class="link dark">{{ texts.1d0795b4 }}</a>
-              <a href="{{ links.-2f646e9 }}" aria-current="page" class="link dark w--current">{{ texts.50c8e507 }}</a>
+              <a href="{{ links.-2f646e9 }}" class="link dark">{{ texts.50c8e507 }}</a>
               <a href="{{ links.3791e3cd }}" class="link dark">{{ texts.4b4273e7 }}</a>
               <a href="{{ links.-718db025 }}" class="link dark">{{ texts.-40192f4d }}</a>
               <a href="{{ links.10f92bd6 }}" class="link dark">{{ texts.-4d429f6c }}</a>
             </div>
-            <div id="close-area" class="nav__close-area"></div>
+            <div id="close-area" data-w-id="c023be1f-7927-022c-1747-f09449d2e0e3" class="nav__close-area"></div>
           </div>
         </div>
       </nav>
     </div>
-  </div>
-  <div class="section slider wf-section">
-    <div class="container slider">
-      <p class="title margin-bottom">{{ texts.-1e9c7ab0 }}</p>
-      {%- assign collection = collections.projet | sort: "f_numero-2" -%}<div class="collection-list-wrapper-slider w-dyn-list">
-        {%- unless collection.length == 0 -%}<div role="list" class="images w-dyn-items">
-          {%- for item in collection -%}<div role="listitem" class="w-dyn-item">
-            <a href="{{ item.url }}" class="image-block w-inline-block"><img loading="lazy" data-sizes="[{&quot;max&quot;:767,&quot;size&quot;:&quot;87vw&quot;},{&quot;max&quot;:1439,&quot;size&quot;:&quot;84vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;1200px&quot;}]" src="{{ item.data.f_image-phare-du-projet.url }}" alt="{{ item.data.title }}" class="img"></a>
-            <div class="info-wrap">
-              <div>{{ item.data.f_numero-2 }}</div>
-              <div class="wrap-titre">
-                <div class="text-block">{{ item.data.title }}</div>
-                <p class="paragraph">{{ item.data.f_description-du-projet }}</p>
-              </div>
-            </div>
-          </div>{%- endfor -%}
-        </div>{%- endunless -%}
-        {%- if collection.length == 0 -%}<div class="w-dyn-empty">
-          <div>{{ texts.3d503d2b }}</div>
-        </div>{%- endif -%}
+  </nav>
+  <main class="main">
+    <div data-w-id="b16fe22b-a796-98ff-4039-4958234d3598" class="section grey wf-section">
+      <div class="container justify-end">
+        {%- assign collection = collections.legal | sort: "-created-on" -%}<div class="collection-list-wrapper w-dyn-list">
+          {%- unless collection.length == 0 -%}<div role="list" class="w-dyn-items">
+            {%- for item in collection -%}<div role="listitem" class="w-dyn-item">
+              <div class="w-richtext">{{ item.templateContent | markdown | markdown }}</div>
+            </div>{%- endfor -%}
+          </div>{%- endunless -%}
+          {%- if collection.length == 0 -%}<div class="w-dyn-empty">
+            <div>{{ texts.3d503d2b }}</div>
+          </div>{%- endif -%}
+        </div>
       </div>
     </div>
-  </div>
+  </main>
   <footer id="footer" class="section footer wf-section">
     <div class="container direction-vertical-align-center">
       <div class="div-block">
@@ -357,7 +344,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       </div>
       <div class="footer-wrap">
         <div class="box">
-          <a href="{{ links.-2f646e9 }}" aria-current="page" class="footer-link w--current">{{ texts.-37ac8366 }}</a>
+          <a href="{{ links.-2f646e9 }}" class="footer-link">{{ texts.-37ac8366 }}</a>
           <a href="{{ links.3791e3cd }}" class="footer-link">{{ texts.4b4273e7 }}</a>
         </div>
         <div class="box align-left">
