--- a/theme/[projet].html
+++ b/theme/[projet].html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
-<html data-wf-page="6441303f19ec770170ced866" data-wf-site="6411ac7715f8d413325735be" lang="fr"><head><link rel="preconnect" crossorigin="true" href="https://assets.website-files.com">{%- seo seo -%}
+<html data-wf-page="6441303f19ec770170ced866" data-wf-site="6411ac7715f8d413325735be" lang="fr"><head><link rel="preconnect" crossorigin="true" href="https://assets.website-files.com">
   <meta charset="utf-8">
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <title>Espasyo - Architecture, Construction en paille, Rénovation | {{ title }}</title>
+  <meta content="Une approche plus intuitive et logique de la construction. Espasyo mise sur des stratégies low-tech et peu énergivores pour allier sobriété et simplicité. Pas de ventilation mécanique ni de climatisation, mais des constructions très bien isolées, avec de grands puits de lumière pour maintenir les températures idéales sans consommation superflue. En bref, une architecture qui se suffit à elle-même et un renoncement généralisé aux technologies surabondantes. Combinés à l’utilisation dénergie solaire pour la production d’eau chaude sanitaire et de chauffage, ces choix révèlent leur plein potentiel." name="description">
+  <meta content="Espasyo - Architecture, Construction en paille, Rénovation | {{ title }}" property="og:title">
+  <meta content="Une approche plus intuitive et logique de la construction. Espasyo mise sur des stratégies low-tech et peu énergivores pour allier sobriété et simplicité. Pas de ventilation mécanique ni de climatisation, mais des constructions très bien isolées, avec de grands puits de lumière pour maintenir les températures idéales sans consommation superflue. En bref, une architecture qui se suffit à elle-même et un renoncement généralisé aux technologies surabondantes. Combinés à l’utilisation dénergie solaire pour la production d’eau chaude sanitaire et de chauffage, ces choix révèlent leur plein potentiel." property="og:description">
+  <meta content="{{ f_image-phare-du-projet.url | escape }}" property="og:image">
+  <meta content="Espasyo - Architecture, Construction en paille, Rénovation | {{ title }}" property="twitter:title">
+  <meta content="Une approche plus intuitive et logique de la construction. Espasyo mise sur des stratégies low-tech et peu énergivores pour allier sobriété et simplicité. Pas de ventilation mécanique ni de climatisation, mais des constructions très bien isolées, avec de grands puits de lumière pour maintenir les températures idéales sans consommation superflue. En bref, une architecture qui se suffit à elle-même et un renoncement généralisé aux technologies surabondantes. Combinés à l’utilisation dénergie solaire pour la production d’eau chaude sanitaire et de chauffage, ces choix révèlent leur plein potentiel." property="twitter:description">
+  <meta content="{{ f_image-phare-du-projet.url | escape }}" property="twitter:image">
+  <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="/assets/css/normalize.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/components.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/dev-espasyo.css" rel="stylesheet" type="text/css">
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="{{ settings.site.favicon | default: "/assets/images/favicon.jpg" }}" rel="shortcut icon" type="image/x-icon">
-  <link href="{{ settings.site.apple_touch_icon | default: "/assets/images/webclip.jpg" }}" rel="apple-touch-icon">
+  <link href="{{ settings.site.apple_touch_icon | default: "/assets/images/webclip.jpg" }}" rel="apple-touch-icon"><!--  Finsweet Cookie Consent  -->
+  <script async="" src="https://cdn.jsdelivr.net/npm/@finsweet/cookie-consent@1/fs-cc.js" fs-cc-mode="opt-in" fs-cc-expires="180"></script>
   <style>
-/*
- * general clean up
-*/
+/* general clean up */
 .w-webflow-badge{display:none!important}
 .w-reset.w-editor-bem-EditorLogo{display:none!important;}
 a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-touch-callout:none!important;-webkit-user-select:none!important;-moz-user-select:none!important;-ms-user-select:none!important}
@@ -163,7 +162,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
         <div class="nav-wrap-desktop">
           <a href="{{ links.2f }}" class="wrap-block-logo w-inline-block"><img src="{{ images.-7a88968b.url }}" loading="lazy" alt="{{ images.-7a88968b.alt | trim | escape }}" class="image"></a>
           <div class="wrap-nav-links">
-            <a href="{{ links.-1875e8 }}" class="nav-link dark">{{ texts.50c8e507 }}</a>
+            <a href="{{ links.-2f646e9 }}" class="nav-link dark">{{ texts.50c8e507 }}</a>
             <a href="{{ links.-10273082 }}" class="nav-link last dark">{{ texts.-64104400 }}</a>
           </div>
         </div>
@@ -232,8 +231,8 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
           <div class="wrapper-menu-mobile">
             <div class="nav__mobile-wrap-links">
               <a href="{{ links.2f }}" class="link dark">{{ texts.1d0795b4 }}</a>
-              <a href="{{ links.-1875e8 }}" class="link dark">{{ texts.50c8e507 }}</a>
-              <a href="{{ links.-590bcf5e }}" class="link dark">{{ texts.4b4273e7 }}</a>
+              <a href="{{ links.-2f646e9 }}" class="link dark">{{ texts.50c8e507 }}</a>
+              <a href="{{ links.3791e3cd }}" class="link dark">{{ texts.4b4273e7 }}</a>
               <a href="{{ links.-718db025 }}" class="link dark">{{ texts.-40192f4d }}</a>
               <a href="{{ links.10f92bd6 }}" class="link dark">{{ texts.-4d429f6c }}</a>
             </div>
@@ -277,7 +276,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
           {%- for setItem in setItems -%}<div role="listitem" class="image-wrap w-dyn-item">
             <a href="{{ links.23 }}" id="lightbox-project" class="lightbox-link w-inline-block w-lightbox"><img loading="lazy" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;100vw&quot;}]" src="{{ setItem.url }}" alt="{{ setItem.alt }}">
               <script type="application/json" class="w-json">{"items":[{"type":"image","url":"{{ setItem.url }}","caption":""}],"group":"images"}</script>
-            </a><img loading="lazy" data-sizes="[{&quot;max&quot;:767,&quot;size&quot;:&quot;87vw&quot;},{&quot;max&quot;:1439,&quot;size&quot;:&quot;84vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;1200px&quot;}]" src="{{ setItem.url }}" alt="{{ setItem.alt }}" class="img test">
+            </a><img loading="eager" data-sizes="[{&quot;max&quot;:767,&quot;size&quot;:&quot;87vw&quot;},{&quot;max&quot;:1439,&quot;size&quot;:&quot;84vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;1200px&quot;}]" src="{{ setItem.url }}" alt="{{ setItem.alt }}" class="img test">
           </div>{%- endfor -%}
         </div>{%- endunless -%}
         {%- if setItems.length == 0 -%}<div class="w-dyn-empty">
@@ -288,7 +287,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
           <div role="listitem" class="image-wrap w-dyn-item">
             <a href="{# links.23 #}" id="lightbox-project" class="lightbox-link w-inline-block w-lightbox"><img loading="lazy" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;100vw&quot;}]" src="{# setItem.url #}" alt="{# setItem.alt #}">
               <script type="application/json" class="w-json">{"items":[{"type":"image","url":"{# setItem.url #}","caption":""}],"group":"images"}</script>
-            </a><img loading="lazy" data-sizes="[{&quot;max&quot;:767,&quot;size&quot;:&quot;87vw&quot;},{&quot;max&quot;:1439,&quot;size&quot;:&quot;84vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;1200px&quot;}]" src="{# setItem.url #}" alt="{# setItem.alt #}" class="img test">
+            </a><img loading="eager" data-sizes="[{&quot;max&quot;:767,&quot;size&quot;:&quot;87vw&quot;},{&quot;max&quot;:1439,&quot;size&quot;:&quot;84vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;1200px&quot;}]" src="{# setItem.url #}" alt="{# setItem.alt #}" class="img test">
           </div>
         </div>
         <div class="w-dyn-empty">
@@ -299,7 +298,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
         {%- unless collection.length == 0 -%}<div role="list" class="images-info w-dyn-items">
           {%- for item in collection -%}<div role="listitem" class="w-dyn-item">
             <div class="info-wrap">
-              <div class="number">{{ item.data.f_numero-2 }}</div>
+              <div class="slider-number">{{ item.data.f_numero-2 }}</div>
               <div class="wrap-titre">
                 <div class="text-block">{{ item.data.title }}</div>
                 <p class="paragraph">{{ item.data.f_description-du-projet }}</p>
@@ -328,7 +327,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       </div>
     </div>
   </div>
-  <div id="footer" class="section footer wf-section">
+  <footer id="footer" class="section footer wf-section">
     <div class="container direction-vertical-align-center">
       <div class="div-block">
         <p class="subline footer">{{ texts.2f481b2a }}</p>
@@ -337,15 +336,15 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       </div>
       <div class="footer-wrap">
         <div class="box">
-          <a href="{{ links.-1875e8 }}" class="footer-link">{{ texts.-37ac8366 }}</a>
-          <a href="{{ links.-590bcf5e }}" class="footer-link">{{ texts.4b4273e7 }}</a>
+          <a href="{{ links.-2f646e9 }}" class="footer-link">{{ texts.-37ac8366 }}</a>
+          <a href="{{ links.3791e3cd }}" class="footer-link">{{ texts.4b4273e7 }}</a>
         </div>
         <div class="box align-left">
           <div class="footer-link">{{ texts.57f295d3 }}</div>
         </div>
       </div>
     </div>
-  </div>
+  </footer>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
   <script src="/assets/js/dev-espasyo.js" type="text/javascript"></script><!--  slick API CDN  -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" defer="" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -421,6 +420,96 @@ function handleHamburgerClick() {
 } // handleHamburgerClick()
 </script>
   <script>
+console.log(
+  `%c🟢 deployed:`,
+  `color: green`,
+  `scroll progress v2 | 29.06.23 @18:32`
+);
+document.addEventListener("DOMContentLoaded", () => {
+  const position = "left";
+  progressInjectCSS(position);
+  progressInjectHTML();
+  showScrollProgress();
+});
+// 🥬 helper | inject wrapper emoji css
+function progressInjectCSS(position) {
+  const css = `.progress-wrap{--indicator-progress-color:rgba(255, 255, 255, 1);--indicator-slide-color:rgba(255, 255, 255, .1);--indicator-font:"Unicons";--indicator-content:"\\e84b";--indicator-hover:white --indicator-position:1.25rem}@font-face{font-family:"Unicons";src:url("https://uploads-ssl.webflow.com/61a0f086f2b1f289503a4957/6329d8e0a1790e3283ae2504_unicons.woff") format("woff");font-weight:400;font-style:normal;font-display:swap}.progress-wrap{position:fixed;mix-blend-mode:difference;${position}:1.5rem;bottom:1.5rem;height:46px;width:46px;cursor:pointer;display:none;border-radius:50px;box-shadow:inset 0 0 0 2px var(--indicator-slide-color);z-index:10000;opacity:0;visibility:hidden;transform:translateY(15px);transition:all 200ms linear}.progress-wrap.active-progress{display:block;opacity:1;visibility:visible;transform:translateY(0)}.progress-wrap::after,.progress-wrap::before{position:absolute;font-family:var(--indicator-font);content:var(--indicator-content);text-align:center;line-height:46px;font-size:24px;left:0;top:0;height:46px;width:46px;cursor:pointer;display:block;transition:all 200ms linear}.progress-wrap::after{color:var(--indicator-progress-color);z-index:1}.progress-wrap:hover::before{color:var(--indicator-hover);transform:scale(1.0);transform-origin:center}.progress-wrap:hover::after{transform:scale(1.15);transform-origin:center}.progress-wrap svg path{fill:none}.progress-wrap svg.progress-circle path{stroke:var(--indicator-progress-color);stroke-width:4;box-sizing:border-box;transition:all 200ms linear}`;
+  const style = document.createElement("style");
+  style.innerHTML = css;
+  document.head.appendChild(style);
+}
+// 🥬 helper | create and inject emoji
+function progressInjectHTML() {
+  const scrollProgressHTML = `<div class="progress-wrap"><svg class="progress-circle svg-content"height="100%"viewBox="-1 -1 102 102"width="100%"><path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98"/></svg></div>`;
+  const div = document.createElement("div");
+  div.innerHTML = scrollProgressHTML;
+  document.body.prepend(div);
+}
+// 🥬 animate scroll progress element
+function showScrollProgress() {
+  // Clause guard
+  if (!document.querySelector(".progress-wrap")) return;
+  const progressPath = document.querySelector(".progress-wrap path");
+  const pathLength = progressPath.getTotalLength();
+  progressPath.style.transition = "none";
+  progressPath.style.strokeDasharray = `${pathLength} ${pathLength}`;
+  progressPath.style.strokeDashoffset = pathLength;
+  progressPath.getBoundingClientRect();
+  progressPath.style.transition = "stroke-dashoffset 10ms linear";
+  const updateProgress = () => {
+    const scroll = window.pageYOffset || document.documentElement.scrollTop;
+    const height =
+      document.documentElement.scrollHeight -
+      document.documentElement.clientHeight;
+    const progress = pathLength - (scroll * pathLength) / height;
+    progressPath.style.strokeDashoffset = progress;
+  };
+  updateProgress();
+  window.addEventListener("scroll", updateProgress, { passive: true });
+  const offset = 50;
+  const duration = 550;
+  window.addEventListener(
+    "scroll",
+    () => {
+      if (window.pageYOffset > offset) {
+        document
+          .querySelector(".progress-wrap")
+          .classList.add("active-progress");
+      } else {
+        document
+          .querySelector(".progress-wrap")
+          .classList.remove("active-progress");
+      }
+    },
+    { passive: true }
+  );
+  document
+    .querySelector(".progress-wrap")
+    .addEventListener("click", (event) => {
+      event.preventDefault();
+      scrollToTop(duration);
+      return false;
+    });
+  function scrollToTop(duration) {
+    const start = window.pageYOffset || document.documentElement.scrollTop;
+    const startTime = performance.now();
+    function scrollStep(timestamp) {
+      const currentTime = timestamp || performance.now();
+      const elapsedTime = currentTime - startTime;
+      const scrollTo = Math.max(start - (start * elapsedTime) / duration, 0);
+      window.scrollTo(0, scrollTo);
+      if (elapsedTime < duration) {
+        window.requestAnimationFrame(scrollStep);
+      }
+    }
+    window.requestAnimationFrame(scrollStep);
+  }
+}
+</script>
+  <script>
+/*
+ * lightbox open on double click
+*/
 $(document).ready(() => {
   $("#lightbox-project").click((event) => {
     event.preventDefault();
