--- a/theme/a-propos.html
+++ b/theme/a-propos.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html data-wf-page="64413091d45539a91190aef2" data-wf-site="6411ac7715f8d413325735be" lang="fr"><head><link rel="preconnect" crossorigin="true" href="https://assets.website-files.com">{%- seo seo -%}
+<html data-wf-page="64413091d45539a91190aef2" data-wf-site="6411ac7715f8d413325735be" lang="fr"><head><link rel="preconnect" crossorigin="true" href="https://assets.website-files.com">
   <meta charset="utf-8">
-  
-  
-  
+  <title>À propos</title>
+  <meta content="À propos" property="og:title">
+  <meta content="À propos" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="/assets/css/normalize.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/components.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/dev-espasyo.css" rel="stylesheet" type="text/css">
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="{{ settings.site.favicon | default: "/assets/images/favicon.jpg" }}" rel="shortcut icon" type="image/x-icon">
-  <link href="{{ settings.site.apple_touch_icon | default: "/assets/images/webclip.jpg" }}" rel="apple-touch-icon">
+  <link href="{{ settings.site.apple_touch_icon | default: "/assets/images/webclip.jpg" }}" rel="apple-touch-icon"><!--  Finsweet Cookie Consent  -->
+  <script async="" src="https://cdn.jsdelivr.net/npm/@finsweet/cookie-consent@1/fs-cc.js" fs-cc-mode="opt-in" fs-cc-expires="180"></script>
   <style>
-/*
- * general clean up
-*/
+/* general clean up */
 .w-webflow-badge{display:none!important}
 .w-reset.w-editor-bem-EditorLogo{display:none!important;}
 a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-touch-callout:none!important;-webkit-user-select:none!important;-moz-user-select:none!important;-ms-user-select:none!important}
@@ -145,9 +144,116 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
   }
 </style>
   </div>
+  <div class="fs-cc-components">
+    <div fs-cc="banner" class="fs-cc-banner_component">
+      <div class="fs-cc-banner_container">
+        <div class="fs-cc-banner_text">{{ texts.-5767796a }}<strong>{{ texts.6af87d0b }}</strong>{{ texts.3276fd0 }}<a href="{{ links.-14519503 }}" class="link-2">{{ texts.6ad7d527 }}</a>{{ texts.1442d302 }}</div>
+        <div class="fs-cc-banner_buttons-wrapper">
+          <a fs-cc="open-preferences" href="{{ links.23 }}" class="fs-cc-banner_text-link">{{ texts.-6bfbaf20 }}</a>
+          <a fs-cc="deny" href="{{ links.23 }}" class="fs-cc-banner_button fs-cc-button-alt w-button">{{ texts.-5c134542 }}</a>
+          <a fs-cc="allow" href="{{ links.23 }}" class="fs-cc-banner_button w-button">{{ texts.-7c16fc2b }}</a>
+        </div>
+      </div>
+      <div fs-cc="interaction" class="fs-cc-banner_trigger"></div>
+    </div>
+    <div fs-cc="manager" class="fs-cc-manager_component">
+      <div fs-cc="open-preferences" class="fs-cc-manager_button">
+        <div class="fs-cc-manager_icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
+            <path style="fill:#dbdbdb;fill-rule:evenodd" d="M32.23 3.17a10.532 10.532 0 0 0-10.45 0l-6.41 3.65-.03.02-6.36 3.72a10.546 10.546 0 0 0-5.23 9.05l-.04 7.37v.03l.04 7.37c.02 3.73 2.01 7.17 5.23 9.05l6.36 3.72.03.02 6.41 3.65c3.24 1.85 7.21 1.85 10.45 0l6.41-3.65.03-.02 6.36-3.72c3.22-1.88 5.21-5.32 5.23-9.05l.04-7.37v-.03l-.04-7.37c-.02-3.73-2.01-7.17-5.23-9.05l-6.36-3.72-.03-.02-6.41-3.65Zm-7.84 4.59a5.3 5.3 0 0 1 5.23 0l6.39 3.64 6.35 3.72a5.27 5.27 0 0 1 2.61 4.53l.04 7.36-.04 7.36c-.01 1.86-1 3.59-2.61 4.53l-6.35 3.72-6.39 3.64a5.3 5.3 0 0 1-5.23 0L18 42.62l-6.35-3.72a5.27 5.27 0 0 1-2.61-4.53L9 27.01l.04-7.36c.01-1.86 1-3.59 2.61-4.53L18 11.4l6.39-3.64ZM24.36 27c0-1.46 1.18-2.64 2.64-2.64s2.64 1.18 2.64 2.64-1.18 2.64-2.64 2.64-2.64-1.18-2.64-2.64ZM27 19.08c-4.38 0-7.92 3.55-7.92 7.92s3.55 7.92 7.92 7.92 7.92-3.55 7.92-7.92-3.55-7.92-7.92-7.92Z"></path>
+          </svg></div>
+      </div>
+      <div fs-cc="interaction" class="fs-cc-manager_trigger"></div>
+    </div>
+    <div fs-cc="preferences" fs-cc-scroll="disable" class="fs-cc-prefs_component w-form">
+      <form id="cookie-preferences" name="wf-form-Cookie-Preferences" data-name="cookie_preferences" method="get" class="fs-cc-prefs_form" data-wf-page-id="64413091d45539a91190aef2" data-wf-element-id="24cf7492-c994-5433-4ac3-8c7dd3f7e584" data-netlify="true" data-ajax="true" data-content-type="application/x-www-form-urlencoded">
+        <div fs-cc="close" class="fs-cc-prefs_close">
+          <div class="fs-cc-prefs_close-icon w-embed"><svg fill="currentColor" aria-hidden="true" focusable="false" viewBox="0 0 16 24">
+              <path d="M9.414 8l4.293-4.293-1.414-1.414L8 6.586 3.707 2.293 2.293 3.707 6.586 8l-4.293 4.293 1.414 1.414L8 9.414l4.293 4.293 1.414-1.414L9.414 8z"></path>
+            </svg></div>
+        </div>
+        <div class="fs-cc-prefs_content">
+          <div class="fs-cc-prefs_space-small">
+            <div class="fs-cc-prefs_title">{{ texts.2dc7a23e }}</div>
+          </div>
+          <div class="fs-cc-prefs_space-small">
+            <div class="fs-cc-prefs_text">{{ texts.5719b980 }}</div>
+          </div>
+          <div class="fs-cc-prefs_space-medium">
+            <a fs-cc="deny" href="{{ links.23 }}" class="fs-cc-prefs_button fs-cc-button-alt w-button">{{ texts.-1bb35ed1 }}</a>
+            <a fs-cc="allow" href="{{ links.23 }}" class="fs-cc-prefs_button w-button">{{ texts.-79c29fd3 }}</a>
+          </div>
+          <div class="fs-cc-prefs_space-small">
+            <div class="fs-cc-prefs_title">{{ texts.351868e0 }}</div>
+          </div>
+          <div class="fs-cc-prefs_option">
+            <div class="fs-cc-prefs_toggle-wrapper">
+              <div class="fs-cc-prefs_label">{{ texts.16a393aa }}</div>
+              <div class="fs-cc-prefs_text"><strong>{{ texts.-5c954f1a }}</strong></div>
+            </div>
+            <div class="fs-cc-prefs_text">{{ texts.-7b9165df }}</div>
+          </div>
+          <div class="fs-cc-prefs_option">
+            <div class="fs-cc-prefs_toggle-wrapper">
+              <div class="fs-cc-prefs_label">{{ texts.5a1ef9af }}</div><label class="w-checkbox fs-cc-prefs_checkbox-field"><input type="checkbox" id="marketing-2" name="marketing-2" data-name="Marketing 2" fs-cc-checkbox="marketing" class="w-checkbox-input fs-cc-prefs_checkbox"><span for="marketing-2" class="fs-cc-prefs_checkbox-label w-form-label">{{ texts.16a3932e }}</span>
+                <div class="fs-cc-prefs_toggle"></div>
+              </label>
+            </div>
+            <div class="fs-cc-prefs_text">{{ texts.-7979fb1e }}</div>
+          </div>
+          <div class="fs-cc-prefs_option">
+            <div class="fs-cc-prefs_toggle-wrapper">
+              <div class="fs-cc-prefs_label">{{ texts.6fc5ea07 }}</div><label class="w-checkbox fs-cc-prefs_checkbox-field"><input type="checkbox" id="personalization-2" name="personalization-2" data-name="Personalization 2" fs-cc-checkbox="personalization" class="w-checkbox-input fs-cc-prefs_checkbox"><span for="personalization-2" class="fs-cc-prefs_checkbox-label w-form-label">{{ texts.16a3932e }}</span>
+                <div class="fs-cc-prefs_toggle"></div>
+              </label>
+            </div>
+            <div class="fs-cc-prefs_text">{{ texts.-1d143c52 }}</div>
+          </div>
+          <div class="fs-cc-prefs_option">
+            <div class="fs-cc-prefs_toggle-wrapper">
+              <div class="fs-cc-prefs_label">{{ texts.4f466fc }}</div><label class="w-checkbox fs-cc-prefs_checkbox-field"><input type="checkbox" id="analytics-2" name="analytics-2" data-name="Analytics 2" fs-cc-checkbox="analytics" class="w-checkbox-input fs-cc-prefs_checkbox"><span for="analytics-2" class="fs-cc-prefs_checkbox-label w-form-label">{{ texts.16a3932e }}</span>
+                <div class="fs-cc-prefs_toggle"></div>
+              </label>
+            </div>
+            <div class="fs-cc-prefs_text">{{ texts.-46635a4 }}</div>
+          </div>
+          <div class="fs-cc-prefs_buttons-wrapper">
+            <a fs-cc="submit" href="{{ links.23 }}" class="fs-cc-prefs_button w-button">{{ texts.-c5b78c0 }}</a>
+          </div><input type="submit" value="Submit" data-wait="Please wait..." class="fs-cc-prefs_submit-hide w-button">
+          <div class="w-embed">
+            <style>
+/* smooth scrolling on iOS devices */
+.fs-cc-prefs_content{-webkit-overflow-scrolling: touch}
+</style>
+          </div>
+        </div>
+      </form>
+      <div class="w-form-done"></div>
+      <div class="w-form-fail"></div>
+      <div fs-cc="close" class="fs-cc-prefs_overlay"></div>
+      <div fs-cc="interaction" class="fs-cc-prefs_trigger"></div>
+    </div>
+  </div>
   <div class="coming-soon wf-section">
     <div>{{ texts.-15803153 }}</div>
   </div>
+  <footer id="footer" class="section footer wf-section">
+    <div class="container direction-vertical-align-center">
+      <div class="div-block">
+        <p class="subline footer">{{ texts.2f481b2a }}</p>
+        <a href="{{ links.-64129cdb }}" class="footer-contact">{{ texts.-40192f4d }}<br></a>
+        <a href="{{ links.-717bed17 }}" class="footer-contact">{{ texts.-4d429f6c }}</a>
+      </div>
+      <div class="footer-wrap">
+        <div class="box">
+          <a href="{{ links.-2f646e9 }}" class="footer-link">{{ texts.-37ac8366 }}</a>
+          <a href="{{ links.3791e3cd }}" aria-current="page" class="footer-link w--current">{{ texts.4b4273e7 }}</a>
+        </div>
+        <div class="box align-left">
+          <div class="footer-link">{{ texts.57f295d3 }}</div>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
   <script src="/assets/js/dev-espasyo.js" type="text/javascript"></script><!--  slick API CDN  -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" defer="" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -221,6 +327,93 @@ function handleHamburgerClick() {
     }); // end click listener
   }); // end foreach
 } // handleHamburgerClick()
+</script>
+  <script>
+console.log(
+  `%c🟢 deployed:`,
+  `color: green`,
+  `scroll progress v2 | 29.06.23 @18:32`
+);
+document.addEventListener("DOMContentLoaded", () => {
+  const position = "left";
+  progressInjectCSS(position);
+  progressInjectHTML();
+  showScrollProgress();
+});
+// 🥬 helper | inject wrapper emoji css
+function progressInjectCSS(position) {
+  const css = `.progress-wrap{--indicator-progress-color:rgba(255, 255, 255, 1);--indicator-slide-color:rgba(255, 255, 255, .1);--indicator-font:"Unicons";--indicator-content:"\\e84b";--indicator-hover:white --indicator-position:1.25rem}@font-face{font-family:"Unicons";src:url("https://uploads-ssl.webflow.com/61a0f086f2b1f289503a4957/6329d8e0a1790e3283ae2504_unicons.woff") format("woff");font-weight:400;font-style:normal;font-display:swap}.progress-wrap{position:fixed;mix-blend-mode:difference;${position}:1.5rem;bottom:1.5rem;height:46px;width:46px;cursor:pointer;display:none;border-radius:50px;box-shadow:inset 0 0 0 2px var(--indicator-slide-color);z-index:10000;opacity:0;visibility:hidden;transform:translateY(15px);transition:all 200ms linear}.progress-wrap.active-progress{display:block;opacity:1;visibility:visible;transform:translateY(0)}.progress-wrap::after,.progress-wrap::before{position:absolute;font-family:var(--indicator-font);content:var(--indicator-content);text-align:center;line-height:46px;font-size:24px;left:0;top:0;height:46px;width:46px;cursor:pointer;display:block;transition:all 200ms linear}.progress-wrap::after{color:var(--indicator-progress-color);z-index:1}.progress-wrap:hover::before{color:var(--indicator-hover);transform:scale(1.0);transform-origin:center}.progress-wrap:hover::after{transform:scale(1.15);transform-origin:center}.progress-wrap svg path{fill:none}.progress-wrap svg.progress-circle path{stroke:var(--indicator-progress-color);stroke-width:4;box-sizing:border-box;transition:all 200ms linear}`;
+  const style = document.createElement("style");
+  style.innerHTML = css;
+  document.head.appendChild(style);
+}
+// 🥬 helper | create and inject emoji
+function progressInjectHTML() {
+  const scrollProgressHTML = `<div class="progress-wrap"><svg class="progress-circle svg-content"height="100%"viewBox="-1 -1 102 102"width="100%"><path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98"/></svg></div>`;
+  const div = document.createElement("div");
+  div.innerHTML = scrollProgressHTML;
+  document.body.prepend(div);
+}
+// 🥬 animate scroll progress element
+function showScrollProgress() {
+  // Clause guard
+  if (!document.querySelector(".progress-wrap")) return;
+  const progressPath = document.querySelector(".progress-wrap path");
+  const pathLength = progressPath.getTotalLength();
+  progressPath.style.transition = "none";
+  progressPath.style.strokeDasharray = `${pathLength} ${pathLength}`;
+  progressPath.style.strokeDashoffset = pathLength;
+  progressPath.getBoundingClientRect();
+  progressPath.style.transition = "stroke-dashoffset 10ms linear";
+  const updateProgress = () => {
+    const scroll = window.pageYOffset || document.documentElement.scrollTop;
+    const height =
+      document.documentElement.scrollHeight -
+      document.documentElement.clientHeight;
+    const progress = pathLength - (scroll * pathLength) / height;
+    progressPath.style.strokeDashoffset = progress;
+  };
+  updateProgress();
+  window.addEventListener("scroll", updateProgress, { passive: true });
+  const offset = 50;
+  const duration = 550;
+  window.addEventListener(
+    "scroll",
+    () => {
+      if (window.pageYOffset > offset) {
+        document
+          .querySelector(".progress-wrap")
+          .classList.add("active-progress");
+      } else {
+        document
+          .querySelector(".progress-wrap")
+          .classList.remove("active-progress");
+      }
+    },
+    { passive: true }
+  );
+  document
+    .querySelector(".progress-wrap")
+    .addEventListener("click", (event) => {
+      event.preventDefault();
+      scrollToTop(duration);
+      return false;
+    });
+  function scrollToTop(duration) {
+    const start = window.pageYOffset || document.documentElement.scrollTop;
+    const startTime = performance.now();
+    function scrollStep(timestamp) {
+      const currentTime = timestamp || performance.now();
+      const elapsedTime = currentTime - startTime;
+      const scrollTo = Math.max(start - (start * elapsedTime) / duration, 0);
+      window.scrollTo(0, scrollTo);
+      if (elapsedTime < duration) {
+        window.requestAnimationFrame(scrollStep);
+      }
+    }
+    window.requestAnimationFrame(scrollStep);
+  }
+}
 </script>
 
 <script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}</body></html>
