--- a/theme/modules/static/cookie-consent.html
+++ b/theme/modules/static/cookie-consent.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
-<html data-wf-page="644130593fdd7e45f3fde91d" data-wf-site="6411ac7715f8d413325735be" lang="fr"><head><link rel="preconnect" crossorigin="true" href="https://assets.website-files.com">
+<html data-wf-page="64b909ebb31916643c8241b7" data-wf-site="6411ac7715f8d413325735be" lang="fr"><head><link rel="preconnect" crossorigin="true" href="https://assets.website-files.com">
   <meta charset="utf-8">
-  <title>Espasyo - Architecture, Construction en paille, Rénovation | Projets</title>
-  <meta content="Une approche plus intuitive et logique de la construction. Espasyo mise sur des stratégies low-tech et peu énergivores pour allier sobriété et simplicité. Pas de ventilation mécanique ni de climatisation, mais des constructions très bien isolées, avec de grands puits de lumière pour maintenir les températures idéales sans consommation superflue. En bref, une architecture qui se suffit à elle-même et un renoncement généralisé aux technologies surabondantes. Combinés à l’utilisation dénergie solaire pour la production d’eau chaude sanitaire et de chauffage, ces choix révèlent leur plein potentiel." name="description">
-  <meta content="Espasyo - Architecture, Construction en paille, Rénovation | Projets" property="og:title">
-  <meta content="Une approche plus intuitive et logique de la construction. Espasyo mise sur des stratégies low-tech et peu énergivores pour allier sobriété et simplicité. Pas de ventilation mécanique ni de climatisation, mais des constructions très bien isolées, avec de grands puits de lumière pour maintenir les températures idéales sans consommation superflue. En bref, une architecture qui se suffit à elle-même et un renoncement généralisé aux technologies surabondantes. Combinés à l’utilisation dénergie solaire pour la production d’eau chaude sanitaire et de chauffage, ces choix révèlent leur plein potentiel." property="og:description">
-  <meta content="https://uploads-ssl.webflow.com/6411ac7715f8d413325735be/644ba0d0cbe59b84cb347b1e_espasyo-opengraph.jpg" property="og:image">
-  <meta content="Espasyo - Architecture, Construction en paille, Rénovation | Projets" property="twitter:title">
-  <meta content="Une approche plus intuitive et logique de la construction. Espasyo mise sur des stratégies low-tech et peu énergivores pour allier sobriété et simplicité. Pas de ventilation mécanique ni de climatisation, mais des constructions très bien isolées, avec de grands puits de lumière pour maintenir les températures idéales sans consommation superflue. En bref, une architecture qui se suffit à elle-même et un renoncement généralisé aux technologies surabondantes. Combinés à l’utilisation dénergie solaire pour la production d’eau chaude sanitaire et de chauffage, ces choix révèlent leur plein potentiel." property="twitter:description">
-  <meta content="https://uploads-ssl.webflow.com/6411ac7715f8d413325735be/644ba0d0cbe59b84cb347b1e_espasyo-opengraph.jpg" property="twitter:image">
-  <meta property="og:type" content="website">
-  <meta content="summary_large_image" name="twitter:card">
+  <title>Cookie Consent</title>
+  <meta content="Cookie Consent" property="og:title">
+  <meta content="Cookie Consent" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="/assets/css/normalize.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/components.css" rel="stylesheet" type="text/css">
@@ -116,41 +109,6 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
             aspect-ratio: 16 / 9;
         }</style></head>
 <body class="body">
-  <div class="embed-css w-embed">
-    <style>
-  /* typography */
-  :root {
-  	font-size: 62.5%;
-  }
-  body {
-    font-size: 1.6px;
-  }
-</style>
-    <style>
-  /* cursor */
-  body:hover .cursorr {
-    opacity: 1;
-  }
-  .cursorr {
-    pointer-events: none;
-    mix-blend-mode: difference;
-  }
-</style>
-    <style>
-  /* clean up */
-  ::selection {
-  background: #000000;
-  color: #FFFFFF;
-  text-shadow: none;
-  }
-  input, textarea, select { 
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none; border-radius: 0; 
-    background-image: none; 
-  }
-</style>
-  </div>
   <div class="fs-cc-components">
     <div fs-cc="banner" class="fs-cc-banner_component">
       <div class="fs-cc-banner_container">
@@ -172,7 +130,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       <div fs-cc="interaction" class="fs-cc-manager_trigger"></div>
     </div>
     <div fs-cc="preferences" fs-cc-scroll="disable" class="fs-cc-prefs_component w-form">
-      <form id="cookie-preferences" name="wf-form-Cookie-Preferences" data-name="cookie_preferences" method="get" class="fs-cc-prefs_form" data-wf-page-id="644130593fdd7e45f3fde91d" data-wf-element-id="24cf7492-c994-5433-4ac3-8c7dd3f7e584" data-netlify="true" data-ajax="true" data-content-type="application/x-www-form-urlencoded">
+      <form id="cookie-preferences" name="wf-form-Cookie-Preferences" data-name="cookie_preferences" method="get" class="fs-cc-prefs_form" data-wf-page-id="64b909ebb31916643c8241b7" data-wf-element-id="24cf7492-c994-5433-4ac3-8c7dd3f7e584" data-netlify="true" data-ajax="true" data-content-type="application/x-www-form-urlencoded">
         <div fs-cc="close" class="fs-cc-prefs_close">
           <div class="fs-cc-prefs_close-icon w-embed"><svg fill="currentColor" aria-hidden="true" focusable="false" viewBox="0 0 16 24">
               <path d="M9.414 8l4.293-4.293-1.414-1.414L8 6.586 3.707 2.293 2.293 3.707 6.586 8l-4.293 4.293 1.414 1.414L8 9.414l4.293 4.293 1.414-1.414L9.414 8z"></path>
@@ -240,132 +198,6 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       <div fs-cc="interaction" class="fs-cc-prefs_trigger"></div>
     </div>
   </div>
-  <div class="section nav wf-section">
-    <div class="container">
-      <nav class="navigation">
-        <div class="nav-wrap-desktop">
-          <a href="{{ links.2f }}" class="wrap-block-logo w-inline-block"><img src="{{ images.-7a88968b.url }}" loading="lazy" alt="{{ images.-7a88968b.alt | trim | escape }}" class="image"></a>
-          <div class="wrap-nav-links">
-            <a href="{{ links.-2f646e9 }}" aria-current="page" class="nav-link dark w--current">{{ texts.50c8e507 }}</a>
-            <a href="{{ links.-10273082 }}" class="nav-link last dark">{{ texts.-64104400 }}</a>
-          </div>
-        </div>
-        <div class="nav-wrap-mobile">
-          <div class="wrapper-hamburger w-embed">
-            <style>
-    :root {
-      --stroke-width: 40px;
-      --stroke-linecap: round;
-      --stroke-color: black;
-      --main-bg-color: translate3d(0, 0, 0);
-      --transition: stroke-dashoffset 0.5s cubic-bezier(0.25, -0.25, 0.75, 1.25),
-        stroke-dasharray 0.5s cubic-bezier(0.25, -0.25, 0.75, 1.25);
-    }
-    #hamburgerSvg {
-      width: 50px;
-      height: 50px;
-      cursor: pointer;
-      -webkit-transform: var(--main-bg-color);
-      -moz-transform: var(--main-bg-color);
-      -o-transform: var(--main-bg-color);
-      -ms-transform: var(--main-bg-color);
-      transform: var(--main-bg-color);
-      /* removes focus for Chrome on Android*/
-      -webkit-tap-highlight-color: rgba(255,
-          255,
-          255,
-          0);
-    }
-    .path-menu {
-      fill: none;
-      -webkit-transition: var(--transition);
-      -moz-transition: var(--transition);
-      -o-transition: var(--transition);
-      -ms-transition: var(--transition);
-      transition: var(--transition);
-      stroke-width: var(--stroke-width);
-      stroke-linecap: var(--stroke-linecap);
-      stroke: var(--stroke-color);
-      stroke-dashoffset: 0px;
-    }
-    #top,
-    #bottom {
-      stroke-dasharray: 240px 950px;
-    }
-    #middle {
-      stroke-dasharray: 240px 240px;
-    }
-    .cross #top,
-    .cross #bottom {
-      stroke-dashoffset: -650px;
-      stroke-dashoffset: -650px;
-    }
-    .cross #middle {
-      stroke-dashoffset: -115px;
-      stroke-dasharray: 1px 220px;
-    }
-  </style>
-            <!--  Hamburger menu SVG markup -->
-            <svg id="hamburgerSvg" viewBox="0 0 800 600">
-              <path id="top" class="path-menu" d="M300,220 C300,220 520,220 540,220 C740,220 640,540 520,420 C440,340 300,200 300,200"></path>
-              <path id="middle" class="path-menu" d="M300,320 L540,320"></path>
-              <path id="bottom" class="path-menu" d="M300,210 C300,210 520,210 540,210 C740,210 640,530 520,410 C440,330 300,190 300,190" transform="translate(480, 320) scale(1, -1) translate(-480, -318) "></path>
-            </svg>
-          </div>
-          <div class="wrapper-menu-mobile">
-            <div class="nav__mobile-wrap-links">
-              <a href="{{ links.2f }}" class="link dark">{{ texts.1d0795b4 }}</a>
-              <a href="{{ links.-2f646e9 }}" aria-current="page" class="link dark w--current">{{ texts.50c8e507 }}</a>
-              <a href="{{ links.3791e3cd }}" class="link dark">{{ texts.4b4273e7 }}</a>
-              <a href="{{ links.-718db025 }}" class="link dark">{{ texts.-40192f4d }}</a>
-              <a href="{{ links.10f92bd6 }}" class="link dark">{{ texts.-4d429f6c }}</a>
-            </div>
-            <div id="close-area" class="nav__close-area"></div>
-          </div>
-        </div>
-      </nav>
-    </div>
-  </div>
-  <div class="section slider wf-section">
-    <div class="container slider">
-      <p class="title margin-bottom">{{ texts.-1e9c7ab0 }}</p>
-      {%- assign collection = collections.projet | sort: "f_numero-2" -%}<div class="collection-list-wrapper-slider w-dyn-list">
-        {%- unless collection.length == 0 -%}<div role="list" class="images w-dyn-items">
-          {%- for item in collection -%}<div role="listitem" class="w-dyn-item">
-            <a href="{{ item.url }}" class="image-block w-inline-block"><img loading="lazy" data-sizes="[{&quot;max&quot;:767,&quot;size&quot;:&quot;87vw&quot;},{&quot;max&quot;:1439,&quot;size&quot;:&quot;84vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;1200px&quot;}]" src="{{ item.data.f_image-phare-du-projet.url }}" alt="{{ item.data.title }}" class="img"></a>
-            <div class="info-wrap">
-              <div>{{ item.data.f_numero-2 }}</div>
-              <div class="wrap-titre">
-                <div class="text-block">{{ item.data.title }}</div>
-                <p class="paragraph">{{ item.data.f_description-du-projet }}</p>
-              </div>
-            </div>
-          </div>{%- endfor -%}
-        </div>{%- endunless -%}
-        {%- if collection.length == 0 -%}<div class="w-dyn-empty">
-          <div>{{ texts.3d503d2b }}</div>
-        </div>{%- endif -%}
-      </div>
-    </div>
-  </div>
-  <footer id="footer" class="section footer wf-section">
-    <div class="container direction-vertical-align-center">
-      <div class="div-block">
-        <p class="subline footer">{{ texts.2f481b2a }}</p>
-        <a href="{{ links.-64129cdb }}" class="footer-contact">{{ texts.-40192f4d }}<br></a>
-        <a href="{{ links.-717bed17 }}" class="footer-contact">{{ texts.-4d429f6c }}</a>
-      </div>
-      <div class="footer-wrap">
-        <div class="box">
-          <a href="{{ links.-2f646e9 }}" aria-current="page" class="footer-link w--current">{{ texts.-37ac8366 }}</a>
-          <a href="{{ links.3791e3cd }}" class="footer-link">{{ texts.4b4273e7 }}</a>
-        </div>
-        <div class="box align-left">
-          <div class="footer-link">{{ texts.57f295d3 }}</div>
-        </div>
-      </div>
-    </div>
-  </footer>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
   <script src="/assets/js/dev-espasyo.js" type="text/javascript"></script><!--  slick API CDN  -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" defer="" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
