--- a/theme/modules/static/footer.html
+++ b/theme/modules/static/footer.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html data-wf-page="6411b33ae68e4ca7943ceff6" data-wf-site="6411ac7715f8d413325735be" lang="fr"><head><link rel="preconnect" crossorigin="true" href="https://assets.website-files.com">
+<html data-wf-page="64412eef532729354a5af947" data-wf-site="6411ac7715f8d413325735be" lang="fr"><head><link rel="preconnect" crossorigin="true" href="https://assets.website-files.com">
   <meta charset="utf-8">
-  <title>🟢 espasyo.ch</title>
+  <title>footer (static)</title>
+  <meta content="footer (static)" property="og:title">
+  <meta content="footer (static)" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="/assets/css/normalize.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/components.css" rel="stylesheet" type="text/css">
@@ -103,10 +105,63 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
   font-size: 50px;
 }
 </style>
-{{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<meta property="og:title" content="🟢 espasyo.ch"><meta property="twitter:title" content="🟢 espasyo.ch"><style>.w-video.w-embed {
+{{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>.w-video.w-embed {
             aspect-ratio: 16 / 9;
         }</style></head>
-<body>
+<body class="body">
+  <div class="embed-css w-embed">
+    <style>
+  /* typography */
+  :root {
+  	font-size: 62.5%;
+  }
+  body {
+    font-size: 1.6px;
+  }
+</style>
+    <style>
+  /* cursor */
+  body:hover .cursorr {
+    opacity: 1;
+  }
+  .cursorr {
+    pointer-events: none;
+    mix-blend-mode: difference;
+  }
+</style>
+    <style>
+  /* clean up */
+  ::selection {
+  background: #000000;
+  color: #FFFFFF;
+  text-shadow: none;
+  }
+  input, textarea, select { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none; border-radius: 0; 
+    background-image: none; 
+  }
+</style>
+  </div>
+  <footer id="footer" class="section footer wf-section">
+    <div class="container direction-vertical-align-center">
+      <div class="div-block">
+        <p class="subline footer">{{ texts.2f481b2a }}</p>
+        <a href="{{ links.-64129cdb }}" class="footer-contact">{{ texts.-40192f4d }}<br></a>
+        <a href="{{ links.-717bed17 }}" class="footer-contact">{{ texts.-4d429f6c }}</a>
+      </div>
+      <div class="footer-wrap">
+        <div class="box">
+          <a href="{{ links.-2f646e9 }}" class="footer-link">{{ texts.-37ac8366 }}</a>
+          <a href="{{ links.3791e3cd }}" class="footer-link">{{ texts.4b4273e7 }}</a>
+        </div>
+        <div class="box align-left">
+          <div class="footer-link">{{ texts.57f295d3 }}</div>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
   <script src="/assets/js/dev-espasyo.js" type="text/javascript"></script><!--  slick API CDN  -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" defer="" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
