--- a/theme/modules/static/untitled.html
+++ b/theme/modules/static/untitled.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html data-wf-page="6411b80996e3de357e55885d" data-wf-site="6411ac7715f8d413325735be" lang="fr"><head><link rel="preconnect" crossorigin="true" href="https://assets.website-files.com">{%- seo seo -%}
+<html data-wf-page="6441391adbe1a8690a08fc63" data-wf-site="6411ac7715f8d413325735be" lang="fr"><head><link rel="preconnect" crossorigin="true" href="https://assets.website-files.com">
   <meta charset="utf-8">
-  
-  
-  
+  <title>Untitled</title>
+  <meta content="Untitled" property="og:title">
+  <meta content="Untitled" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="/assets/css/normalize.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/components.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/dev-espasyo.css" rel="stylesheet" type="text/css">
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="{{ settings.site.favicon | default: "/assets/images/favicon.jpg" }}" rel="shortcut icon" type="image/x-icon">
-  <link href="{{ settings.site.apple_touch_icon | default: "/assets/images/webclip.jpg" }}" rel="apple-touch-icon">
+  <link href="{{ settings.site.apple_touch_icon | default: "/assets/images/webclip.jpg" }}" rel="apple-touch-icon"><!--  Finsweet Cookie Consent  -->
+  <script async="" src="https://cdn.jsdelivr.net/npm/@finsweet/cookie-consent@1/fs-cc.js" fs-cc-mode="opt-in" fs-cc-expires="180"></script>
   <style>
-/*
- * general clean up
-*/
+/* general clean up */
 .w-webflow-badge{display:none!important}
 .w-reset.w-editor-bem-EditorLogo{display:none!important;}
 a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-touch-callout:none!important;-webkit-user-select:none!important;-moz-user-select:none!important;-ms-user-select:none!important}
@@ -109,68 +108,8 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>.w-video.w-embed {
             aspect-ratio: 16 / 9;
         }</style></head>
-<body class="body">
-  <div class="embed-css w-embed">
-    <style>
-  /* typography */
-  :root {
-  	font-size: 62.5%;
-  }
-  body {
-    font-size: 1.6px;
-  }
-</style>
-    <style>
-  /* cursor */
-  body:hover .cursorr {
-    opacity: 1;
-  }
-  .cursorr {
-    pointer-events: none;
-    mix-blend-mode: difference;
-  }
-</style>
-    <style>
-  /* clean up */
-  ::selection {
-  background: #000000;
-  color: #FFFFFF;
-  text-shadow: none;
-  }
-  input, textarea, select { 
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none; border-radius: 0; 
-    background-image: none; 
-  }
-</style>
-  </div>
-  <div class="cursorr">
-    <div class="c-dot">
-      <div class="cursor-text drag">{{ texts.6eae131 }}</div>
-    </div>
-  </div>
-  <div class="section slider wf-section">
-    <div class="container slider">
-      <p class="title margin-bottom">{{ texts.-6b948300 }}</p>
-      {%- assign collection = collections.projet | filter: "f_highlight,eq,true", "ALL", page.inputPath | sort: "f_numero-2" -%}<div class="collection-list-wrapper-slider w-dyn-list">
-        {%- unless collection.length == 0 -%}<div role="list" class="images w-dyn-items">
-          {%- for item in collection -%}<div role="listitem" class="w-dyn-item"><img loading="lazy" data-sizes="[{&quot;max&quot;:767,&quot;size&quot;:&quot;87vw&quot;},{&quot;max&quot;:1439,&quot;size&quot;:&quot;84vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;1200px&quot;}]" src="{{ item.data.f_image-phare-du-projet.url }}" alt="{{ item.data.title }}" class="img">
-            <div class="info-wrap">
-              <div>{{ item.data.f_numero-2 }}</div>
-              <div class="wrap-titre">
-                <div class="text-block">{{ item.data.title }}</div>
-                <p class="paragraph">{{ item.data.f_description-du-projet }}</p>
-              </div>
-            </div>
-          </div>{%- endfor -%}
-        </div>{%- endunless -%}
-        {%- if collection.length == 0 -%}<div class="w-dyn-empty">
-          <div>{{ texts.3d503d2b }}</div>
-        </div>{%- endif -%}
-      </div>
-    </div>
-  </div>
+<body>
+  <div class="cursor-text drag">{{ texts.6eae131 }}</div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
   <script src="/assets/js/dev-espasyo.js" type="text/javascript"></script><!--  slick API CDN  -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" defer="" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -244,6 +183,93 @@ function handleHamburgerClick() {
     }); // end click listener
   }); // end foreach
 } // handleHamburgerClick()
+</script>
+  <script>
+console.log(
+  `%c🟢 deployed:`,
+  `color: green`,
+  `scroll progress v2 | 29.06.23 @18:32`
+);
+document.addEventListener("DOMContentLoaded", () => {
+  const position = "left";
+  progressInjectCSS(position);
+  progressInjectHTML();
+  showScrollProgress();
+});
+// 🥬 helper | inject wrapper emoji css
+function progressInjectCSS(position) {
+  const css = `.progress-wrap{--indicator-progress-color:rgba(255, 255, 255, 1);--indicator-slide-color:rgba(255, 255, 255, .1);--indicator-font:"Unicons";--indicator-content:"\\e84b";--indicator-hover:white --indicator-position:1.25rem}@font-face{font-family:"Unicons";src:url("https://uploads-ssl.webflow.com/61a0f086f2b1f289503a4957/6329d8e0a1790e3283ae2504_unicons.woff") format("woff");font-weight:400;font-style:normal;font-display:swap}.progress-wrap{position:fixed;mix-blend-mode:difference;${position}:1.5rem;bottom:1.5rem;height:46px;width:46px;cursor:pointer;display:none;border-radius:50px;box-shadow:inset 0 0 0 2px var(--indicator-slide-color);z-index:10000;opacity:0;visibility:hidden;transform:translateY(15px);transition:all 200ms linear}.progress-wrap.active-progress{display:block;opacity:1;visibility:visible;transform:translateY(0)}.progress-wrap::after,.progress-wrap::before{position:absolute;font-family:var(--indicator-font);content:var(--indicator-content);text-align:center;line-height:46px;font-size:24px;left:0;top:0;height:46px;width:46px;cursor:pointer;display:block;transition:all 200ms linear}.progress-wrap::after{color:var(--indicator-progress-color);z-index:1}.progress-wrap:hover::before{color:var(--indicator-hover);transform:scale(1.0);transform-origin:center}.progress-wrap:hover::after{transform:scale(1.15);transform-origin:center}.progress-wrap svg path{fill:none}.progress-wrap svg.progress-circle path{stroke:var(--indicator-progress-color);stroke-width:4;box-sizing:border-box;transition:all 200ms linear}`;
+  const style = document.createElement("style");
+  style.innerHTML = css;
+  document.head.appendChild(style);
+}
+// 🥬 helper | create and inject emoji
+function progressInjectHTML() {
+  const scrollProgressHTML = `<div class="progress-wrap"><svg class="progress-circle svg-content"height="100%"viewBox="-1 -1 102 102"width="100%"><path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98"/></svg></div>`;
+  const div = document.createElement("div");
+  div.innerHTML = scrollProgressHTML;
+  document.body.prepend(div);
+}
+// 🥬 animate scroll progress element
+function showScrollProgress() {
+  // Clause guard
+  if (!document.querySelector(".progress-wrap")) return;
+  const progressPath = document.querySelector(".progress-wrap path");
+  const pathLength = progressPath.getTotalLength();
+  progressPath.style.transition = "none";
+  progressPath.style.strokeDasharray = `${pathLength} ${pathLength}`;
+  progressPath.style.strokeDashoffset = pathLength;
+  progressPath.getBoundingClientRect();
+  progressPath.style.transition = "stroke-dashoffset 10ms linear";
+  const updateProgress = () => {
+    const scroll = window.pageYOffset || document.documentElement.scrollTop;
+    const height =
+      document.documentElement.scrollHeight -
+      document.documentElement.clientHeight;
+    const progress = pathLength - (scroll * pathLength) / height;
+    progressPath.style.strokeDashoffset = progress;
+  };
+  updateProgress();
+  window.addEventListener("scroll", updateProgress, { passive: true });
+  const offset = 50;
+  const duration = 550;
+  window.addEventListener(
+    "scroll",
+    () => {
+      if (window.pageYOffset > offset) {
+        document
+          .querySelector(".progress-wrap")
+          .classList.add("active-progress");
+      } else {
+        document
+          .querySelector(".progress-wrap")
+          .classList.remove("active-progress");
+      }
+    },
+    { passive: true }
+  );
+  document
+    .querySelector(".progress-wrap")
+    .addEventListener("click", (event) => {
+      event.preventDefault();
+      scrollToTop(duration);
+      return false;
+    });
+  function scrollToTop(duration) {
+    const start = window.pageYOffset || document.documentElement.scrollTop;
+    const startTime = performance.now();
+    function scrollStep(timestamp) {
+      const currentTime = timestamp || performance.now();
+      const elapsedTime = currentTime - startTime;
+      const scrollTo = Math.max(start - (start * elapsedTime) / duration, 0);
+      window.scrollTo(0, scrollTo);
+      if (elapsedTime < duration) {
+        window.requestAnimationFrame(scrollStep);
+      }
+    }
+    window.requestAnimationFrame(scrollStep);
+  }
+}
 </script>
 
 <script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}</body></html>
