removed collection list on project template + cookie UI updates

--- a/theme/modules/dynamic/slider.html
+++ b/theme/modules/dynamic/slider.html
@@ -157,7 +157,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
           {%- for item in collection -%}<div role="listitem" class="collection-item w-dyn-item"><img loading="lazy" data-sizes="[{&quot;max&quot;:767,&quot;size&quot;:&quot;87vw&quot;},{&quot;max&quot;:1439,&quot;size&quot;:&quot;84vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;1200px&quot;}]" src="{{ item.data.f_image-phare-du-projet.url }}" alt="{{ item.data.title }}" class="img">
             <div class="info-wrap">
               <div class="slider-number">{{ item.data.f_numero-2 }}</div>
-              <div class="wrap-titre">
+              <div class="wrap-title">
                 <div class="text-block">{{ item.data.title }}</div>
                 <p class="paragraph">{{ item.data.f_description-du-projet }}</p>
               </div>
