--- a/theme/[projet].html
+++ b/theme/[projet].html
@@ -294,21 +294,12 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
           <div>{# texts.3d503d2b #}</div>
         </div>
       </div></template></div>
-      {%- assign collection = collections.projet | filter: "slug,eq,DYN_CONTEXT", "ALL", page.inputPath | sort: "f_numero-2" -%}<div class="collection-list-wrapper-slider w-dyn-list">
-        {%- unless collection.length == 0 -%}<div role="list" class="images-info w-dyn-items">
-          {%- for item in collection -%}<div role="listitem" class="w-dyn-item">
-            <div class="info-wrap">
-              <div class="slider-number">{{ item.data.f_numero-2 }}</div>
-              <div class="wrap-titre">
-                <div class="text-block">{{ item.data.title }}</div>
-                <p class="paragraph">{{ item.data.f_description-du-projet }}</p>
-              </div>
-            </div>
-          </div>{%- endfor -%}
-        </div>{%- endunless -%}
-        {%- if collection.length == 0 -%}<div class="w-dyn-empty">
-          <div>{{ texts.3d503d2b }}</div>
-        </div>{%- endif -%}
+      <div class="info-wrap">
+        <div class="slider-number">{{ f_numero-2 }}</div>
+        <div class="wrap-title">
+          <div class="text-block">{{ title }}</div>
+          <p class="paragraph">{{ f_description-du-projet }}</p>
+        </div>
       </div>
     </div>
   </div>
