--- a/theme/projets.html
+++ b/theme/projets.html
@@ -335,7 +335,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
             <a href="{{ item.url }}" class="image-block w-inline-block"><img loading="lazy" data-sizes="[{&quot;max&quot;:767,&quot;size&quot;:&quot;87vw&quot;},{&quot;max&quot;:1439,&quot;size&quot;:&quot;84vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;1200px&quot;}]" src="{{ item.data.f_image-phare-du-projet.url }}" alt="{{ item.data.title }}" class="img"></a>
             <div class="info-wrap">
               <div>{{ item.data.f_numero-2 }}</div>
-              <div class="wrap-titre">
+              <div class="wrap-title">
                 <div class="text-block">{{ item.data.title }}</div>
                 <p class="paragraph">{{ item.data.f_description-du-projet }}</p>
               </div>
