added overlay coming soon

--- a/theme/a-propos.html
+++ b/theme/a-propos.html
@@ -233,10 +233,10 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       <div fs-cc="interaction" class="fs-cc-prefs_trigger"></div>
     </div>
   </div>
-  <div class="coming-soon wf-section">
+  <div class="coming-soon">
     <div>{{ texts.-15803153 }}</div>
   </div>
-  <footer id="footer" class="section footer wf-section">
+  <footer id="footer" class="section footer">
     <div class="container direction-vertical-align-center">
       <div class="div-block">
         <p class="subline footer">{{ texts.2f481b2a }}</p>
