--- a/theme/modules/static/header.html
+++ b/theme/modules/static/header.html
@@ -144,7 +144,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
   }
 </style>
   </div>
-  <div class="section header wf-section">
+  <div class="section header">
     <div class="container header">
       <div class="navigation">
         <a href="{{ links.2f }}" class="w-inline-block"><img src="{{ images.-7a88968b.url }}" loading="lazy" alt="{{ images.-7a88968b.alt | trim | escape }}" class="image"></a>
