--- a/theme/modules/static/highlight-horizontal.html
+++ b/theme/modules/static/highlight-horizontal.html
@@ -144,7 +144,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
   }
 </style>
   </div>
-  <div class="section grey wf-section">
+  <div class="section grey">
     <div class="container justify-end">
       <div class="wrapper-highlights"><img class="img-horizontal" src="{{ images.-15470899.url }}" alt="{{ images.-15470899.alt | trim | escape }}" data-sizes="[{&quot;max&quot;:1439,&quot;size&quot;:&quot;65vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;800px&quot;}]" sizes="(max-width: 1439px) 65vw, 800px" loading="lazy">
         <p class="paragraph margin-top">{{ texts.2ec05f38 }}</p>
