--- a/theme/politique-de-confidentialite.html
+++ b/theme/politique-de-confidentialite.html
@@ -233,7 +233,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       <div fs-cc="interaction" class="fs-cc-prefs_trigger"></div>
     </div>
   </div>
-  <nav class="section nav wf-section">
+  <nav class="section nav">
     <div class="container">
       <nav class="navigation">
         <div class="nav-wrap-desktop">
@@ -320,7 +320,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
     </div>
   </nav>
   <main class="main">
-    <div data-w-id="b16fe22b-a796-98ff-4039-4958234d3598" class="section grey wf-section">
+    <div data-w-id="b16fe22b-a796-98ff-4039-4958234d3598" class="section grey">
       <div class="container justify-end">
         {%- assign collection = collections.legal | sort: "-created-on" -%}<div class="collection-list-wrapper w-dyn-list">
           {%- unless collection.length == 0 -%}<div role="list" class="w-dyn-items">
@@ -335,7 +335,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       </div>
     </div>
   </main>
-  <footer id="footer" class="section footer wf-section">
+  <footer id="footer" class="section footer">
     <div class="container direction-vertical-align-center">
       <div class="div-block">
         <p class="subline footer">{{ texts.2f481b2a }}</p>
