--- a/theme/[projet].html
+++ b/theme/[projet].html
@@ -156,7 +156,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       <div class="cursor-text drag">{{ texts.6eae131 }}</div>
     </div>
   </div>
-  <div class="section nav wf-section">
+  <div class="section nav">
     <div class="container">
       <nav class="navigation">
         <div class="nav-wrap-desktop">
@@ -242,12 +242,12 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       </nav>
     </div>
   </div>
-  <div class="section no-padding-bottom wf-section">
+  <div class="section no-padding-bottom">
     <div class="container">
       <p class="title margin-bottom top">{{ title }}</p>
     </div>
   </div><img loading="lazy" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;100vw&quot;}]" src="{{ f_image-phare-du-projet.url }}" alt="{{ f_image-phare-du-projet.alt }}" class="img-project">
-  <div class="section wf-section">
+  <div class="section">
     <div class="container">
       <div class="w-layout-grid grid">
         <div id="w-node-ccbd7460-7061-e98a-c684-6db36f01b20b-70ced866" class="wrap-overview">
@@ -268,7 +268,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       </div>
     </div>
   </div>
-  <div class="section slider wf-section">
+  <div class="section slider">
     <div class="container slider projects">
       <p class="title margin-bottom">{{ texts.-1e76c072 }}<br>{{ texts.-3af3777f }}</p>
       {%- assign setItems = f_images -%}<div class="collection-list-wrapper-slider w-dyn-list">
@@ -303,7 +303,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       </div>
     </div>
   </div>
-  <div class="section wf-section">
+  <div class="section">
     <div class="container direction-vertical">
       <p class="title margin-bottom">{{ texts.af61b07 }}</p>
       {%- assign projetOfProjet = f_autres-projets-3 | resolveMultiReferences | limit: 2 -%}<div class="collection-list-wrapper-similar-projets w-dyn-list">
@@ -318,7 +318,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       </div>
     </div>
   </div>
-  <footer id="footer" class="section footer wf-section">
+  <footer id="footer" class="section footer">
     <div class="container direction-vertical-align-center">
       <div class="div-block">
         <p class="subline footer">{{ texts.2f481b2a }}</p>
