--- a/theme/index.html
+++ b/theme/index.html
@@ -245,7 +245,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       <div class="cursor-text drag">{{ texts.6eae131 }}</div>
     </div>
   </div>
-  <nav class="section nav wf-section">
+  <nav class="section nav">
     <div class="container">
       <nav class="navigation">
         <div class="nav-wrap-desktop">
@@ -331,13 +331,13 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       </nav>
     </div>
   </nav>
-  <header class="section header wf-section">
+  <header class="section header">
     <div class="container header">
       <p data-w-id="4362f71c-6cdc-de4c-ebf2-464cc9f7d327" style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="title header">{{ texts.6515d33d }}</p>
     </div><img class="img header" src="{{ images.54ee7ec.url }}" alt="{{ images.54ee7ec.alt | trim | escape }}" data-sizes="[{&quot;max&quot;:767,&quot;size&quot;:&quot;100vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;67vw&quot;}]" style="opacity:0" sizes="(max-width: 767px) 100vw, 67vw" data-w-id="78d37f07-d4ba-7611-0d3d-f9d54629509f" loading="eager">
   </header>
   <main class="main">
-    <div data-w-id="35279f3c-0f51-d62d-3daf-818b0a502dd3" class="section wf-section">
+    <div data-w-id="35279f3c-0f51-d62d-3daf-818b0a502dd3" class="section">
       <div class="container align-botom">
         {%- assign collection = collections.highlight | filter: "f_number,eq,1", "ALL", page.inputPath | sort: "-created-on" -%}<div class="collection-list-wrapper-highlights vertical w-dyn-list">
           {%- unless collection.length == 0 -%}<div role="list" class="collection-list-highlights w-dyn-items">
@@ -356,7 +356,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
         </div>
       </div>
     </div>
-    <div data-w-id="0b79a3fd-6b9f-878a-96e5-6ea1a2288ba7" class="section grey wf-section">
+    <div data-w-id="0b79a3fd-6b9f-878a-96e5-6ea1a2288ba7" class="section grey">
       <div class="container justify-end">
         {%- assign collection = collections.highlight | filter: "f_number,eq,2", "ALL", page.inputPath | sort: "-created-on" -%}<div class="collection-list-wrapper-highlights w-dyn-list">
           {%- unless collection.length == 0 -%}<div role="list" class="collection-list-highlights justify-right w-dyn-items">
@@ -373,7 +373,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
         </div>
       </div>
     </div>
-    <div class="section slider wf-section">
+    <div class="section slider">
       <div class="container slider">
         <p class="title margin-bottom">{{ texts.-1e9c7ab0 }}</p>
         {%- assign collection = collections.projet | filter: "f_highlight,eq,true", "ALL", page.inputPath | sort: "f_numero-2" -%}<div class="collection-list-wrapper-slider w-dyn-list">
@@ -395,7 +395,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
         </div>
       </div>
     </div>
-    <div data-w-id="b7f8d7ba-3998-b981-8c1b-39154ed954fe" class="section wf-section">
+    <div data-w-id="b7f8d7ba-3998-b981-8c1b-39154ed954fe" class="section">
       <div class="container align-botom">
         {%- assign collection = collections.highlight | filter: "f_number,eq,3", "ALL", page.inputPath | sort: "-created-on" -%}<div class="collection-list-wrapper-highlights vertical w-dyn-list">
           {%- unless collection.length == 0 -%}<div role="list" class="collection-list-highlights w-dyn-items">
@@ -414,7 +414,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
         </div>
       </div>
     </div>
-    <div data-w-id="58bfb0f2-8b1b-8e5c-23a2-a1c00f1ca2fa" class="section grey wf-section">
+    <div data-w-id="58bfb0f2-8b1b-8e5c-23a2-a1c00f1ca2fa" class="section grey">
       <div class="container justify-end">
         {%- assign collection = collections.highlight | filter: "f_number,eq,4", "ALL", page.inputPath | sort: "-created-on" -%}<div class="collection-list-wrapper-highlights w-dyn-list">
           {%- unless collection.length == 0 -%}<div role="list" class="collection-list-highlights justify-right w-dyn-items">
@@ -432,7 +432,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       </div>
     </div>
   </main>
-  <footer id="footer" class="section footer wf-section">
+  <footer id="footer" class="section footer">
     <div class="container direction-vertical-align-center">
       <div class="div-block">
         <p class="subline footer">{{ texts.2f481b2a }}</p>
@@ -450,6 +450,9 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       </div>
     </div>
   </footer>
+  <div class="overlay">
+    <div>{{ texts.-568ea4c6 }}</div>
+  </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
   <script src="/assets/js/dev-espasyo.js" type="text/javascript"></script><!--  slick API CDN  -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" defer="" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
