--- a/theme/modules/dynamic/slider.html
+++ b/theme/modules/dynamic/slider.html
@@ -149,7 +149,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       <div class="cursor-text drag">{{ texts.6eae131 }}</div>
     </div>
   </div>
-  <div class="section slider wf-section">
+  <div class="section slider">
     <div class="container slider">
       <p class="title margin-bottom">{{ texts.-6b948300 }}</p>
       {%- assign collection = collections.projet | filter: "f_highlight,eq,true", "ALL", page.inputPath | sort: "f_numero-2" -%}<div class="collection-list-wrapper-slider w-dyn-list">
