--- a/theme/modules/static/footer.html
+++ b/theme/modules/static/footer.html
@@ -144,7 +144,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
   }
 </style>
   </div>
-  <footer id="footer" class="section footer wf-section">
+  <footer id="footer" class="section footer">
     <div class="container direction-vertical-align-center">
       <div class="div-block">
         <p class="subline footer">{{ texts.2f481b2a }}</p>
