--- a/theme/modules/static/highlight-vertical.html
+++ b/theme/modules/static/highlight-vertical.html
@@ -144,7 +144,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
   }
 </style>
   </div>
-  <div class="section wf-section">
+  <div class="section">
     <div class="container align-botom">
       <div class="envelope-vertical">
         <div class="wrap-img-vertical">
