--- a/theme/modules/static/navigation.html
+++ b/theme/modules/static/navigation.html
@@ -144,7 +144,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
   }
 </style>
   </div>
-  <div class="section nav wf-section">
+  <div class="section nav">
     <div class="container">
       <nav class="navigation">
         <div class="nav-wrap-desktop">
