--- a/theme/projets.html
+++ b/theme/projets.html
@@ -240,7 +240,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       <div fs-cc="interaction" class="fs-cc-prefs_trigger"></div>
     </div>
   </div>
-  <div class="section nav wf-section">
+  <div class="section nav">
     <div class="container">
       <nav class="navigation">
         <div class="nav-wrap-desktop">
@@ -326,7 +326,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       </nav>
     </div>
   </div>
-  <div class="section slider wf-section">
+  <div class="section slider">
     <div class="container slider">
       <p class="title margin-bottom">{{ texts.-1e9c7ab0 }}</p>
       {%- assign collection = collections.projet | sort: "f_numero-2" -%}<div class="collection-list-wrapper-slider w-dyn-list">
@@ -348,7 +348,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       </div>
     </div>
   </div>
-  <footer id="footer" class="section footer wf-section">
+  <footer id="footer" class="section footer">
     <div class="container direction-vertical-align-center">
       <div class="div-block">
         <p class="subline footer">{{ texts.2f481b2a }}</p>
