--- a/theme/index.html
+++ b/theme/index.html
@@ -116,6 +116,9 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
             aspect-ratio: 16 / 9;
         }</style></head>
 <body class="body">
+  <div class="overlay">
+    <div>{{ texts.-568ea4c6 }}</div>
+  </div>
   <div class="embed-css w-embed">
     <style>
   /* typography */
@@ -375,7 +378,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
     </div>
     <div class="section slider">
       <div class="container slider">
-        <p class="title margin-bottom">{{ texts.-1e9c7ab0 }}</p>
+        <p class="title margin-bottom">{{ texts.602b4d30 }}<br>{{ texts.42a9fb78 }}</p>
         {%- assign collection = collections.projet | filter: "f_highlight,eq,true", "ALL", page.inputPath | sort: "f_numero-2" -%}<div class="collection-list-wrapper-slider w-dyn-list">
           {%- unless collection.length == 0 -%}<div role="list" class="images w-dyn-items">
             {%- for item in collection -%}<div role="listitem" class="w-dyn-item">
@@ -450,9 +453,6 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       </div>
     </div>
   </footer>
-  <div class="overlay">
-    <div>{{ texts.-568ea4c6 }}</div>
-  </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
   <script src="/assets/js/dev-espasyo.js" type="text/javascript"></script><!--  slick API CDN  -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" defer="" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
