--- a/theme/modules/dynamic/slider.html
+++ b/theme/modules/dynamic/slider.html
@@ -154,7 +154,7 @@ a:focus,button:focus,input:focus,textarea:focus{outline:0!important}a{-webkit-to
       <p class="title margin-bottom">{{ texts.-6b948300 }}</p>
       {%- assign collection = collections.projet | filter: "f_highlight,eq,true", "ALL", page.inputPath | sort: "f_numero-2" -%}<div class="collection-list-wrapper-slider w-dyn-list">
         {%- unless collection.length == 0 -%}<div role="list" class="images w-dyn-items">
-          {%- for item in collection -%}<div role="listitem" class="collection-item w-dyn-item"><img loading="lazy" data-sizes="[{&quot;max&quot;:767,&quot;size&quot;:&quot;87vw&quot;},{&quot;max&quot;:1439,&quot;size&quot;:&quot;84vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;1200px&quot;}]" src="{{ item.data.f_image-phare-du-projet.url }}" alt="{{ item.data.title }}" class="img">
+          {%- for item in collection -%}<div role="listitem" class="collection-item w-dyn-item"><img alt="{{ item.data.title }}" loading="lazy" data-sizes="[{&quot;max&quot;:767,&quot;size&quot;:&quot;87vw&quot;},{&quot;max&quot;:1439,&quot;size&quot;:&quot;84vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;1200px&quot;}]" src="{{ item.data.f_image-phare-du-projet.url }}" class="img">
             <div class="info-wrap">
               <div class="slider-number">{{ item.data.f_numero-2 }}</div>
               <div class="wrap-title">
